--- a/css/style.scss
+++ b/css/style.scss
@@ -276,7 +276,6 @@ body {
           top: 230px;
           left: 420px;
           .andreas-hovered {
-            overflow: hidden;
             width: 240px;
             height: 250px;
             -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
@@ -289,18 +288,55 @@ body {
             -o-transition: opacity .5s;
             transition: opacity .5s;
             h1 {
+              padding-top: 20%;
               margin: 0;
-              font-size: 18px;
+              font-size: 20px;
               color: #fff;
               text-align: center;
-            }
-            i {
-              text-align: center;
 
             }
-            p {
-              text-align: center;
 
+            .mail{
+              position: absolute;
+              left: 24px;
+              text-align: center;
+              display: inline;
+              p{
+                display: inline;
+                font-size: 15px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:5px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+                }
+              }
+
+            }
+            .phone{
+              position: absolute;
+              left: 40px;
+              text-align: center;
+              display: inline;
+              padding-top: 10px;
+
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:2px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+
+                }
+              }
             }
           }
           &:hover .andreas-hovered {
@@ -321,6 +357,75 @@ body {
           left: 610px;
           top: 125px;
 
+          .felix-hovered {
+            width: 240px;
+            height: 250px;
+            -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+            clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+            background-color: rgba(0, 90, 167, 0.76);
+            opacity: 0;
+            -webkit-transition: opacity .5s;
+            -moz-transition: opacity .5s;
+            -ms-transition: opacity .5s;
+            -o-transition: opacity .5s;
+            transition: opacity .5s;
+            h1 {
+              padding-top: 20%;
+              margin: 0;
+              font-size: 20px;
+              color: #fff;
+              text-align: center;
+
+            }
+
+            .mail{
+              position: absolute;
+              left: 24px;
+              text-align: center;
+              display: inline;
+              p{
+                display: inline;
+                font-size: 15px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:5px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+                }
+              }
+
+            }
+            .phone{
+              position: absolute;
+              left: 40px;
+              text-align: center;
+              display: inline;
+              padding-top: 10px;
+
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:2px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+
+                }
+              }
+            }
+          }
+          &:hover .felix-hovered {
+            opacity: 1;
+          }
+
+
         }
         .stefan {
           background-image: url('../assets/imgs/Stefan.JPG');
@@ -334,6 +439,76 @@ body {
           position: absolute;
           left: 800px;
           top: 230px;
+
+          .stefan-hovered {
+            width: 240px;
+            height: 250px;
+            -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+            clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+            background-color: rgba(0, 90, 167, 0.76);
+            opacity: 0;
+            -webkit-transition: opacity .5s;
+            -moz-transition: opacity .5s;
+            -ms-transition: opacity .5s;
+            -o-transition: opacity .5s;
+            transition: opacity .5s;
+            h1 {
+              padding-top: 20%;
+              margin: 0;
+              font-size: 20px;
+              color: #fff;
+              text-align: center;
+
+            }
+
+            .mail{
+              position: absolute;
+              left: 24px;
+              text-align: center;
+              display: inline;
+              p{
+                display: inline;
+                font-size: 15px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:5px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+                }
+              }
+
+            }
+            .phone{
+              position: absolute;
+              left: 40px;
+              text-align: center;
+              display: inline;
+              padding-top: 10px;
+
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:2px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+
+                }
+              }
+            }
+          }
+          &:hover .stefan-hovered {
+            opacity: 1;
+          }
+
+
 
         }
         .franziska {
@@ -349,6 +524,74 @@ body {
           left: 420px;
           top: 442px;
 
+          .franziska-hovered {
+            width: 240px;
+            height: 250px;
+            -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+            clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+            background-color: rgba(0, 90, 167, 0.76);
+            opacity: 0;
+            -webkit-transition: opacity .5s;
+            -moz-transition: opacity .5s;
+            -ms-transition: opacity .5s;
+            -o-transition: opacity .5s;
+            transition: opacity .5s;
+            h1 {
+              padding-top: 20%;
+              margin: 0;
+              font-size: 18px;
+              color: #fff;
+              text-align: center;
+
+            }
+
+            .mail{
+              position: absolute;
+              left: 18px;
+              text-align: center;
+              display: inline;
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:5px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+                }
+              }
+
+            }
+            .phone{
+              position: absolute;
+              left: 40px;
+              text-align: center;
+              display: inline;
+              padding-top: 10px;
+
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:2px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+
+                }
+              }
+            }
+          }
+          &:hover .franziska-hovered {
+            opacity: 1;
+          }
+
         }
         .silvia {
           background-image: url('../assets/imgs/Silvia.JPG');
@@ -363,6 +606,75 @@ body {
           top: 335px;
           left: 610px;
 
+          .silvia-hovered {
+            width: 240px;
+            height: 250px;
+            -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+            clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+            background-color: rgba(0, 90, 167, 0.76);
+            opacity: 0;
+            -webkit-transition: opacity .5s;
+            -moz-transition: opacity .5s;
+            -ms-transition: opacity .5s;
+            -o-transition: opacity .5s;
+            transition: opacity .5s;
+            h1 {
+              padding-top: 20%;
+              margin: 0;
+              font-size: 20px;
+              color: #fff;
+              text-align: center;
+
+            }
+
+            .mail{
+              position: absolute;
+              left: 18px;
+              text-align: center;
+              display: inline;
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:5px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+                }
+              }
+
+            }
+            .phone{
+              position: absolute;
+              left: 40px;
+              text-align: center;
+              display: inline;
+              padding-top: 10px;
+
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:2px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+
+                }
+              }
+            }
+          }
+          &:hover .silvia-hovered {
+            opacity: 1;
+          }
+
+
         }
         .tanja {
           background-image: url('../assets/imgs/Tanja.JPG');
@@ -376,6 +688,74 @@ body {
           position: absolute;
           top: 442px;
           left: 800px;
+
+          .tanja-hovered {
+            width: 240px;
+            height: 250px;
+            -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+            clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+            background-color: rgba(0, 90, 167, 0.76);
+            opacity: 0;
+            -webkit-transition: opacity .5s;
+            -moz-transition: opacity .5s;
+            -ms-transition: opacity .5s;
+            -o-transition: opacity .5s;
+            transition: opacity .5s;
+            h1 {
+              padding-top: 20%;
+              margin: 0;
+              font-size: 17px;
+              color: #fff;
+              text-align: center;
+
+            }
+
+            .mail{
+              position: absolute;
+              left: 18px;
+              text-align: center;
+              display: inline;
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:5px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+                }
+              }
+
+            }
+            .phone{
+              position: absolute;
+              left: 40px;
+              text-align: center;
+              display: inline;
+              padding-top: 10px;
+
+              p{
+                display: inline;
+                font-size: 13px;
+                color: #fff;
+                vertical-align: middle;
+                i{
+                  color: #fff;
+                  padding-right:2px;
+                  vertical-align: middle;
+                  display: inline;
+                  font-size: 20px;
+
+                }
+              }
+            }
+          }
+          &:hover .tanja-hovered {
+            opacity: 1;
+          }
 
         }
       }
